Implement refactor of how clients handle exceptions